@@ -14,6 +14,9 @@ Changelog
 - Remove custom pathbar styling and template.
   [kevin]
 
+- Do not display searchbox on the same height as the global section.
+  We need more space for the global section.
+  [mathias.leimgruber]
 
 1.0.0a4 (2015-12-09)
 --------------------
